[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["astrotool"]

[project]
name = "astrotool"
version = "0.0.19"
authors = [ { name="Marc van der Sluys", email="git@vandersluys.nl" } ]
description = "A Python package for astronomical calculations in Python or on the command line"
readme   = "README.md"
license  = "EUPL-1.2"
keywords = ["astronomy","ephemeris","date","time","coordinates"]
dependencies = ["astroconst","colored_traceback","numpy"]

# See: https://pypi.org/pypi?:action=list_classifiers
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "Intended Audience :: Education",
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Topic :: Scientific/Engineering :: Astronomy",
    ]

[project.urls]
GitHub = "https://github.com/MarcvdSluys/AstroTool"
ReadTheDocs = "https://astrotool.readthedocs.io"
Homepage="http://astro.ru.nl/~sluys/AstroTool"

[project.scripts]
at-orb-a-from-p = "astrotool.cli_scripts:orb_a_from_p"
at-wd-radius-from-mass = "astrotool.cli_scripts:wd_radius_from_mass"
